--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco003/cumco003.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco003/cumco003.component.html
@@ -18,6 +18,7 @@
         </div>
       </ng-template>
     </p-toast>
+
     <p-tabPanel header="{{ 'CUMCO003.pestana1' | translate }}">
 
       <p-fieldset legend="{{ 'CUMCO003.titulo' | translate }}">
@@ -28,8 +29,8 @@
           <div class="ui-g-12">
             <div class="ui-inputgroup">
               <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
-              <p-autoComplete [(ngModel)]="seleccionPlantilla" field="codigo" [suggestions]="listaPlantilla" (completeMethod)="searchPlantilla($event)" [dropdown]="true" [forceSelection]="true"
-                placeholder="{{ 'CUMCO003.FILTROS.filtroPlantillaPlaceHolder' | translate }}"></p-autoComplete>
+              <p-autoComplete [(ngModel)]="seleccionPlantilla" field="codigo" [suggestions]="listaPlantilla" (completeMethod)="searchPlantilla($event)" [dropdown]="true"  (focusout)="focusOutFiltroPlantilla()"
+              (onSelect)="selectFilter($event)" placeholder="{{ 'CUMCO003.FILTROS.filtroPlantillaPlaceHolder' | translate }}"></p-autoComplete>
               <p-button icon="pi pi-times" (click)="onClicBorrarAutoCompletePlantilla()"></p-button>
             </div>
           </div>
@@ -41,7 +42,8 @@
           <div class="ui-g-12">
             <div class="ui-inputgroup">
               <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
-              <p-autoComplete [(ngModel)]="seleccionRadicado" field="codigoDescripcion" [suggestions]="listaRadicado" (completeMethod)="searchRadicado($event)" [dropdown]="true" [forceSelection]="true"
+              <p-autoComplete [(ngModel)]="seleccionRadicado" field="codigoDescripcion" [suggestions]="listaRadicado" 
+                (onSelect)="selectFilter($event)" (completeMethod)="searchRadicado($event)" [dropdown]="true" (focusout)="focusOutFiltroRadicado()"
                 placeholder="{{ 'CUMCO003.FILTROS.filtroTipoRadicadoPlaceHolder' | translate }}"></p-autoComplete>
               <p-button icon="pi pi-times" (click)="onClicBorrarAutoCompleteRadicado()"></p-button>
             </div>
@@ -54,7 +56,8 @@
           <div class="ui-g-12">
             <div class="ui-inputgroup">
               <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
-              <p-autoComplete [(ngModel)]="seleccionClaseDocumental" field="codigoDescripcion" [suggestions]="listaClaseDocumental" (completeMethod)="searchClaseDocumento($event)" [dropdown]="true" [forceSelection]="true"
+              <p-autoComplete [(ngModel)]="seleccionClaseDocumental" field="codigoDescripcion" [suggestions]="listaClaseDocumental" 
+                (onSelect)="selectFilter($event)" (completeMethod)="searchClaseDocumento($event)" [dropdown]="true"  (focusout)="focusOutClaseDocumental()"
                 placeholder="{{ 'CUMCO003.FILTROS.filtroClaseDocumentalPlaceHolder' | translate }}"></p-autoComplete>
               <p-button icon="pi pi-times" (click)="onClicBorrarAutoCompleteDocumento()"></p-button>
             </div>
@@ -67,7 +70,9 @@
         <p-messages [(value)]="msgs"></p-messages>
 
         <!-- Start Table -->
-        <p-table [columns]="cols" [value]="rows" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[5,10,20]" selectionMode="single" [(selection)]="selectedRows">
+        <p-table [columns]="cols" [value]="rows" [paginator]="true" [rows]="nRowsTable1" 
+        [rowsPerPageOptions]="nRowsOptionsTable1" selectionMode="single" [(selection)]="selectedRows"
+        [scrollable]="true">
 
           <!-- Table Caption -->
           <ng-template pTemplate="caption">
@@ -93,111 +98,121 @@
 
           <!-- Table Content -->
           <ng-template pTemplate="body" let-row let-rowData let-columns="columns" let-rowIndex="rowIndex">
-            <tr [pSelectableRow]="row" [pSelectableRowIndex]="rowIndex" [ngStyle]="gteRowColorState(row)" *ngIf="(seleccionPlantilla === undefined || seleccionPlantilla.id === row.plantilla.id)
-            && (seleccionRadicado === undefined || seleccionRadicado.id === row.tipoRadicado.id)
-            && (seleccionClaseDocumental === undefined || seleccionClaseDocumental.id === row.claseDocumental.id)
-            || (row.state === 'new')">
+            <tr [pSelectableRow]="row" [pSelectableRowIndex]="rowIndex" [ngStyle]="gteRowColorState(row)">
               <td pEditableColumn *ngFor="let col of columns; let i = index" [attr.data-index]="i">
 
                 <div [ngSwitch]="i">
+
                   <div *ngSwitchCase="0"> {{rowIndex + 1}}</div>
+
                   <div *ngSwitchCase="1">
                     <p-cellEditor>
                       <ng-template pTemplate="input">
-                        <p-autoComplete [(ngModel)]="row.plantilla" field="codigo" [suggestions]="listaPlantilla" (onSelect)="edited(rowIndex)" (completeMethod)="searchPlantilla($event)" (click)="onClickElminiarSelected()"
-                          [dropdown]="true" [forceSelection]="true" [disabled]="row.state === 'delete'"></p-autoComplete>
+                        <p-autoComplete field="codigo" [suggestions]="listaPlantilla" (onSelect)="selectPlantillaTabla($event,row)" (completeMethod)="searchPlantilla($event)" (click)="onClickElminiarSelected()" 
+                          [dropdown]="true" [disabled]="row.state === 'delete' || row.claseDocumental.codigoDescripcion === '2 Entrada' "></p-autoComplete>
                       </ng-template>
                       <ng-template pTemplate="output">
                         {{row.plantilla.codigo}}
                       </ng-template>
                     </p-cellEditor>
                   </div>
+
                   <div *ngSwitchCase="2">
                     <p-cellEditor>
                       <ng-template pTemplate="input">
-                        <p-autoComplete [(ngModel)]="row.tipoRadicado" field="codigoDescripcion" [suggestions]="listaRadicado" (onSelect)="edited(rowIndex)" (completeMethod)="searchRadicado($event)"
-                          (click)="onClickElminiarSelected()" [dropdown]="true" [forceSelection]="true" [disabled]="row.state === 'delete'"></p-autoComplete>
+                        <p-autoComplete field="codigoDescripcion" [suggestions]="listaRadicado" (onSelect)="selectTipoRadicadoTabla($event,row)" (completeMethod)="searchRadicado($event)" [forceSelection]="true"
+                          (click)="onClickElminiarSelected()" [dropdown]="true" [disabled]="row.state === 'delete'"></p-autoComplete>
                       </ng-template>
                       <ng-template pTemplate="output">
                         {{row.tipoRadicado.codigoDescripcion}}
                       </ng-template>
                     </p-cellEditor>
                   </div>
+
                   <div *ngSwitchCase="3">
                     <p-cellEditor>
                       <ng-template pTemplate="input">
-                        <p-autoComplete [(ngModel)]="row.tramiteTipoRadicado" field="descripcion" [suggestions]="listaSubTipoRadicado" (onSelect)="edited(rowIndex)" (completeMethod)="searchSubTipoRadicado($event, rowIndex)"
-                          (click)="onClickElminiarSelected()" [dropdown]="true" [forceSelection]="true" [disabled]="row.state === 'delete'"></p-autoComplete>
+                        <p-autoComplete field="descripcion" [suggestions]="listaSubTipoRadicado" (onSelect)="selectSubtipoRadicadoTabla($event,row)" (completeMethod)="searchSubTipoRadicado($event, rowIndex)" [forceSelection]="true"
+                          (click)="onClickElminiarSelected()" [dropdown]="true" [disabled]="row.state === 'delete'"></p-autoComplete>
                       </ng-template>
-                      <ng-template pTemplate="output">
-                        {{row.tramiteTipoRadicado.descripcion}}
+                      <ng-template pTemplate="output"  >
+                          {{row.tramiteTipoRadicado.descripcion}}
                       </ng-template>
                     </p-cellEditor>
                   </div>
+
                   <div *ngSwitchCase="4">
                     <p-cellEditor>
                       <ng-template pTemplate="input">
-                        <p-autoComplete [(ngModel)]="row.tipoDocumental" field="codigoDescripcion" [suggestions]="listadoDocumento" (onSelect)="edited(rowIndex)" (completeMethod)="searchDocumento($event)"
-                          (click)="onClickElminiarSelected()" [dropdown]="true" [forceSelection]="true" [disabled]="row.state === 'delete'"></p-autoComplete>
+                        <p-autoComplete field="codigoDescripcion" [suggestions]="listadoDocumento" (onSelect)="selectTipoDocumentalTabla($event,row)" (completeMethod)="searchDocumento($event)"
+                          (click)="onClickElminiarSelected()" [dropdown]="true" [disabled]="row.state === 'delete'"></p-autoComplete>
                       </ng-template>
                       <ng-template pTemplate="output">
                         {{row.tipoDocumental.codigoDescripcion}}
                       </ng-template>
                     </p-cellEditor>
                   </div>
+
                   <div *ngSwitchCase="5">
                     <p-cellEditor>
                       <ng-template pTemplate="input">
-                        <p-autoComplete [(ngModel)]="row.claseDocumental" field="codigoDescripcion" (onSelect)="edited(rowIndex)" (click)="onClickElminiarSelected()" [suggestions]="listaClaseDocumental" (completeMethod)="searchClaseDocumento($event)" [dropdown]="true" [forceSelection]="true"
-                        ></p-autoComplete>
-
+                        <p-autoComplete field="codigoDescripcion" (onSelect)="validacionEntrada(rowIndex, $event)" (click)="onClickElminiarSelected()" 
+                          [suggestions]="listaClaseDocumental" (completeMethod)="searchClaseDocumento($event)" [dropdown]="true" >
+                        </p-autoComplete>
                         <!-- <p-dropdown [options]="listaClaseDocumental" optionLabel="codigoDescripcion" [(ngModel)]="row.claseDocumental" [disabled]="row.state === 'delete'" (onChange)="validacionEntrada(rowIndex)" (click)="onClickElminiarSelected()"> </p-dropdown> -->
-
                       </ng-template>
                       <ng-template pTemplate="output">
                         {{row.claseDocumental.codigoDescripcion}}
                       </ng-template>
                     </p-cellEditor>
                   </div>
+
                   <div *ngSwitchCase="6" style="text-align: center">
-                    <p-checkbox name="groupname" [(ngModel)]="row.terminoRequerimiento" [binary]="true" (onChange)="edited(rowIndex)" [disabled]="row.state === 'delete' || row.prorrogaEntidad === 1 || row.prorrogaPeticionario === 1"
+                    <p-checkbox name="groupname" [(ngModel)]="row.terminoRequerimiento" [binary]="true" (onChange)="onchangeTerminoRequerimiento(row)" [disabled]="row.state === 'delete' || row.prorrogaEntidad === 1 || row.prorrogaPeticionario === 1"
                       (ngModelChange)="row.terminoRequerimiento = $event ? 1 : 0"></p-checkbox>
                   </div>
+
                   <div *ngSwitchCase="7">
                     <p-cellEditor>
                       <ng-template pTemplate="input">
-                        <input type="number" [(ngModel)]="row.diasRequerimiento" [disabled]="row.state === 'delete' || row.terminoRequerimiento === 0" (focusout)="edited(rowIndex)" (keydown.enter)="edited(rowIndex)" [maxlength]="3" min="0">
+                        <input type="number" [(ngModel)]="row.diasRequerimiento" [disabled]="row.state === 'delete' || row.terminoRequerimiento === 0" (focusout)="keyDownDiasRequerimiento(row)" (keydown.enter)="keyDownDiasRequerimiento(row)" [maxlength]="3" min="1">
                       </ng-template>
                       <ng-template pTemplate="output">
                         {{row.diasRequerimiento}}
                       </ng-template>
                     </p-cellEditor>
                   </div>
+
                   <div *ngSwitchCase="8" style="text-align: center">
-                    <p-checkbox name="groupname" [(ngModel)]="row.prorrogaEntidad" [binary]="true" (onChange)="edited(rowIndex)" [disabled]="row.state === 'delete' || row.prorrogaPeticionario === 1 || row.terminoRequerimiento === 1"
+                    <p-checkbox name="groupname" [(ngModel)]="row.prorrogaEntidad" [binary]="true" (onChange)="onchangeDiasProrroga(row)" [disabled]="row.state === 'delete' || row.prorrogaPeticionario === 1 || row.terminoRequerimiento === 1"
                       (ngModelChange)="row.prorrogaEntidad = $event ? 1 : 0"></p-checkbox>
                   </div>
+
                   <div *ngSwitchCase="9" style="text-align: center">
-                    <p-checkbox name="groupname" [(ngModel)]="row.prorrogaPeticionario" [binary]="true" (onChange)="edited(rowIndex)" [disabled]="row.state === 'delete' || row.terminoRequerimiento === 1 || row.prorrogaEntidad === 1"
+                    <p-checkbox name="groupname" [(ngModel)]="row.prorrogaPeticionario" [binary]="true" (onChange)="onchangeDiasProrroga(row)" [disabled]="row.state === 'delete' || row.terminoRequerimiento === 1 || row.prorrogaEntidad === 1"
                       (ngModelChange)="row.prorrogaPeticionario = $event ? 1 : 0"></p-checkbox>
                   </div>
+
                   <div *ngSwitchCase="10">
                     <p-cellEditor>
                       <ng-template pTemplate="input">
-                        <input type="number" [(ngModel)]="row.diasProrroga" [disabled]="row.state === 'delete' || (row.prorrogaEntidad === 0 && row.prorrogaPeticionario === 0)" (focusout)="edited(rowIndex)" (keydown.enter)="edited(rowIndex)"
-                          (click)="onClickElminiarSelected()" [maxlength]="3" min="0">
+                        <input type="number" [(ngModel)]="row.diasProrroga" [disabled]="row.state === 'delete' || (row.prorrogaEntidad === 0 && row.prorrogaPeticionario === 0)" (focusout)="keyDownDiasProrroga(row)" (keydown.enter)="keyDownDiasProrroga(row)"
+                          (click)="onClickElminiarSelected()" [maxlength]="3" min="1">
                       </ng-template>
                       <ng-template pTemplate="output">
                         {{row.diasProrroga}}
                       </ng-template>
                     </p-cellEditor>
                   </div>
+
                   <div *ngSwitchCase="11">
                     <p-cellEditor>
                       <ng-template pTemplate="input">
-                        <p-autoComplete [(ngModel)]="row.tipoComunicacion" [suggestions]="tablaDocumentos" (completeMethod)="searchTabla($event)"
-                                        [dropdown]="true" [forceSelection]="true" [disabled]="row.state === 'delete'" field = "codigoDescripcion"
-                                        (onSelect)="edited(rowIndex)" (click)="onClickElminiarSelected()">
+                        <p-autoComplete [suggestions]="suggestionsTipoComunicacionTabla" (completeMethod)="searchTipoComunicacionTabla($event)"
+                                        [dropdown]="true" [disabled]="row.state === 'delete'" field = "codigoDescripcion"
+                                        (onSelect)="selectTipoComunicacionTabla($event,row)"
+                                        [(ngModel)]="row.tipoComunicacion"
+                                        (click)="onClickElminiarSelected()">
                         </p-autoComplete>
                       </ng-template>
                       <ng-template pTemplate="output">
@@ -221,8 +236,11 @@
 
     <p-tabPanel header="{{ 'CUMCO003.pestana2' | translate }}">
 
+      <p-messages [(value)]="msgs"></p-messages>
+
       <!-- Start Table -->
-      <p-table [columns]="cols2" [value]="tablaDocumentos" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[5,10,20]" selectionMode="single" [(selection)]="selectedRowDocument">
+      <p-table [columns]="cols2" [value]="tablaDocumentos" [paginator]="true"  [rows]="nRowsTable2" 
+      [rowsPerPageOptions]="nRowsOptionsTable2" selectionMode="single" [(selection)]="selectedRowDocument">
 
         <!-- Table Caption -->
         <ng-template pTemplate="caption">
@@ -256,7 +274,7 @@
                 <div *ngSwitchCase="0">
                   <p-cellEditor>
                     <ng-template pTemplate="input">
-                      <input type="number" [(ngModel)]="row.codigo" [disabled]="row.state === 'delete'" (focusout)="editedDocument(rowIndex)" (keydown.enter)="editedDocument(rowIndex)" [maxlength]="3">
+                      <input type="number" [(ngModel)]="row.codigo" [disabled]="row.state === 'delete' || !row.editable" (focusout)="editedDocument(rowIndex)" (keydown.enter)="editedDocument(rowIndex)" [maxlength]="2">
                     </ng-template>
                     <ng-template pTemplate="output">
                       {{row.codigo}}
@@ -266,7 +284,7 @@
                 <div *ngSwitchCase="1">
                   <p-cellEditor>
                     <ng-template pTemplate="input">
-                      <input type="text" [(ngModel)]="row.descripcion" [disabled]="row.state === 'delete'" (focusout)="editedDocument(rowIndex)" (keydown.enter)="editedDocument(rowIndex)" [maxlength]="100">
+                      <input type="text" [(ngModel)]="row.descripcion" [disabled]="row.state === 'delete' || !row.editable" (focusout)="editedDocument(rowIndex)" (keydown.enter)="editedDocument(rowIndex)" [maxlength]="50">
                     </ng-template>
                     <ng-template pTemplate="output">
                       {{row.descripcion}}
@@ -277,8 +295,8 @@
                   <p-cellEditor>
                     <ng-template pTemplate="input">
                       <!--<p-dropdown [options]="listaClaseDocumental" optionLabel="descripcion" [(ngModel)]="row.claseDocumental" [disabled]="row.state === 'delete'" (onChange)="editedDocument(rowIndex)" (click)="onClickElminiarSelected2()"></p-dropdown> (completeMethod)="searchDocumento($event)" -->
-                      <p-autoComplete [(ngModel)]="row.claseDocumental" field="codigoDescripcion" [suggestions]="listaClaseDocumental" (onSelect)="editedDocument(rowIndex)" (completeMethod)="searchClaseDocumento($event)" 
-                      (click)="onClickElminiarSelected2()" [dropdown]="true" [forceSelection]="true" [disabled]="row.state === 'delete'"></p-autoComplete>
+                      <p-autoComplete field="codigoDescripcion" [suggestions]="listaClaseDocumental" (onSelect)="selectClaseDocumentalTabla2($event,row)" (completeMethod)="searchClaseDocumento($event)" 
+                      (click)="onClickElminiarSelected2()" [dropdown]="true" [disabled]="row.state === 'delete' || !row.editable"></p-autoComplete>
                     </ng-template>
                     <ng-template pTemplate="output">
                       {{row.claseDocumental.descripcion}}
