--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco012/cumco012.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco012/cumco012.component.html
@@ -19,7 +19,7 @@
       <br>
       <p class=boldParragraph>{{ 'CUMCO012.FILTROS.tituloTabla' | translate }}</p>
       <br>
-
+          <p-messages [(value)]="msgs"></p-messages>
           <!-- Start Table -->
           <p-table [columns]="cols" [value]="rows"
           [paginator]="true" [rows]="10" [rowsPerPageOptions]="[5,10,20]"
