--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco005/cumco005.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco005/cumco005.component.html
@@ -8,7 +8,7 @@
       <div class="ui-g-12">
         <div class="ui-inputgroup">
           <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
-          <p-autoComplete [(ngModel)]="seleccionTipoAnexoFisicos" field="descripcion" [suggestions]="tipoAnexoFisicos" (completeMethod)="searchTipoanexo($event)" [dropdown]="true" [forceSelection]="true"
+          <p-autoComplete [(ngModel)]="seleccionTipoAnexoFisicos" field="descripcion" [suggestions]="tipoAnexoFisicos" (completeMethod)="searchTipoanexo($event)" [dropdown]="true" 
             placeholder="{{ 'CUMCO005.FILTROS.filtroAnexoTipoFisicoPlaceHolder' | translate }}"></p-autoComplete>
 
           <p-button icon="pi pi-times" (click)="onClicBorrarAutoCompleteTipo()"></p-button>
@@ -22,7 +22,7 @@
       <div class="ui-g-12">
         <div class="ui-inputgroup">
           <span class="ui-inputgroup-addon"><i class="pi pi-search" style="line-height: 1;"></i></span>
-          <p-autoComplete [(ngModel)]="seleccionAnexoFisicos" field="descripcion"  [suggestions]="anexosFisicos" (completeMethod)="searchAnexo($event)" [dropdown]="true" [forceSelection]="true"
+          <p-autoComplete [(ngModel)]="seleccionAnexoFisicos" field="descripcion"  [suggestions]="anexosFisicos" (completeMethod)="searchAnexo($event)" [dropdown]="true" 
             placeholder="{{ 'CUMCO005.FILTROS.filtroAnexoFisicoPlaceHolder' | translate }}"></p-autoComplete>
           <p-button icon="pi pi-times" (click)="onClicBorrarAutoCompleteAnexo()"></p-button>
         </div>
@@ -35,9 +35,10 @@
 
   <p-fieldset legend="{{ 'CUMCO005.configurarAnexosFisicos' | translate }}">
 
+    <p-messages [(value)]="msgs"></p-messages>
     <!-- Start Table -->
     <!-- Start Table -->
-    <p-table [columns]="cols" [value]="rows" [paginator]="true" [rows]="10" [rowsPerPageOptions]="[5,10,20]" selectionMode="single" [(selection)]="selectedRow" sortField="tipo_documental">
+    <p-table [columns]="cols" [value]="rows" [paginator]="true" [rows]="15" [rowsPerPageOptions]="[5,10,15,20]" selectionMode="single" [(selection)]="selectedRow" sortField="tipo_documental">
 
       <!-- Table Caption -->
       <ng-template pTemplate="caption">
@@ -74,7 +75,7 @@
                   <ng-template pTemplate="input">
                     <p-autoComplete [(ngModel)]="row.claseAnexo" field="descripcion" [suggestions]="tipoAnexoFisicos"
                     (onSelect) = "edited(rowIndex)"  (completeMethod)="searchTipoanexo($event)" (click)="onClickElminiarSelected()"
-                    (onSelect)="checkBox(rowIndex)" [dropdown]="true" [forceSelection]="true" [disabled]="row.state === 'delete'"></p-autoComplete>
+                    (onSelect)="checkBox(rowIndex)" [dropdown]="true"  [disabled]="row.state === 'delete'"></p-autoComplete>
                   </ng-template>
                   <ng-template pTemplate="output">
                     {{row.claseAnexo.descripcion}}
@@ -86,7 +87,7 @@
                   <ng-template pTemplate="input">
                     <p-autoComplete [(ngModel)]="row.tipoAnexoFisico" field="descripcion" [suggestions]="anexosFisicos"
                     (onSelect) = "edited(rowIndex)" (completeMethod)="searchAnexo($event)" (click)="onClickElminiarSelected()"
-                    [dropdown]="true" [forceSelection]="true" [disabled]="row.state === 'delete'"></p-autoComplete>
+                    [dropdown]="true"  [disabled]="row.state === 'delete'"></p-autoComplete>
                   </ng-template>
                   <ng-template pTemplate="output">
                     {{row.tipoAnexoFisico.descripcion}}
