--- a/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco006/cumco006.component.html
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/lib/cumco006/cumco006.component.html
@@ -77,6 +77,7 @@
 
   <p-fieldset legend="{{ 'CUMCO006.tituloTablaFestivos' | translate }}">
 
+    <p-messages [(value)]="msgs"></p-messages>
     <!-- Start Table -->
     <p-table [columns]="cols" [value]="listaFestivo" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5,10,20]" selectionMode="single" [(selection)]="seleccionFestivo">
 
